2004-11-23  Daniel Macks  <dmacks@netspace.org>

	* execute_nonroot_okay.t,execute_script_nonroot_okay.t: Wrote some
	basic tests.